updated homepage design

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
       <div class="profile-card">
         <div class="avatar">
           <!-- replace src with your avatar path -->
-          <img src="recent photo.png" alt="Profile avatar">
+          <img src="970970_1_.jpeg" alt="Profile avatar">
         </div>
         <div class="profile-info">
           <div class="name">S N Yakshaa</div>
